test-suite/bugs/closed/bug_9527.v
Fail Check fix f (x : nat) := (let x := (f x) in f 0).
